* Bug #39105: removed scrollbar of the UMC installer header
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-3@62797 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
@@ -82,6 +82,7 @@ body.claro.umcOverviewNotShown {
 body.claro.umcHeadless {
 	#umcHeader,
 	#umcHeader .umcHeaderLeft {
+		overflow: hidden;
 		min-height: 0;
 		height: 42px;
 	}
